--- a/AOC2022/AOC2022.csproj
+++ b/AOC2022/AOC2022.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="xunit" Version="2.4.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Inputs" />
+    </ItemGroup>
+
 </Project>
